# hlsdk-cleanup

./: .gitignore  CMakeLists.txt  README.md
cl_dll/: CMakeLists.txt  StudioModelRenderer.cpp  battery.cpp  entity.cpp  hud.cpp  hud.h  hud_bench.cpp  hud_clock.cpp  hud_menu.cpp  hud_msg.cpp  hud_redraw.cpp  hud_spectator.cpp  hud_statusbar.cpp  input.cpp  ranking.cpp  ranking.h  tri.cpp  vgui_ClassMenu.cpp  vgui_CustomObjects.cpp  vgui_FinishSummaryPanel.cpp  vgui_SchemeManager.cpp  vgui_ScorePanel.cpp  vgui_TeamFortressViewport.cpp  vgui_TeamFortressViewport.h  vgui_firstmenu.cpp  vgui_int.cpp  vgui_teammenu.cpp  view.cpp
common/: vector.h  wouter.cpp
dlls/: CMakeLists.txt  animation.cpp  cdll_dll.h  client.cpp  game.cpp  game.h  gamerules.cpp  gamerules.h  globals.cpp  hl.def  player.cpp  player.h  singleplay_gamerules.cpp  triggers.cpp  util.h  world.cpp
engine/: eiface.h
fgd/: runjumpretry.fgd
game_dir/: liblist.gam
game_dir/resource/: GameMenu.res
game_shared/: vgui_loadtga.cpp
pm_shared/: pm_shared.c
web_dir/rjr-service/: pom.xml
web_dir/rjr-service/src/main/java/rjr/: Application.java  ChallangeController.java  ChallangeResult.java  ChallangesManager.java
web_dir/submit-score/: index.php  top.php
