
set(SRC_HL_CDLL
	ammo.cpp
	ammohistory.cpp
	ammo_secondary.cpp
	battery.cpp
	cdll_int.cpp
	com_weapons.cpp
	death.cpp
	demo.cpp
	entity.cpp
	events.cpp
	ev_common.cpp
	ev_hldm.cpp
	flashlight.cpp
	GameStudioModelRenderer.cpp
	geiger.cpp
	health.cpp
	hud.cpp
	hud_bench.cpp
	hud_benchtrace.cpp
	hud_msg.cpp
	hud_redraw.cpp
	hud_servers.cpp
	hud_spectator.cpp
	hud_update.cpp
	input.cpp
	inputw32.cpp
	interpolation.cpp
	in_camera.cpp
	menu.cpp
	message.cpp
	saytext.cpp
	statusbar.cpp
	status_icons.cpp
	StudioModelRenderer.cpp
	studio_util.cpp
	text_message.cpp
	train.cpp
	tri.cpp
	util.cpp
	vgui_ClassMenu.cpp
	vgui_ControlConfigPanel.cpp
	vgui_CustomObjects.cpp
	vgui_firstmenu.cpp
	vgui_int.cpp
	vgui_MOTDWindow.cpp
	vgui_SchemeManager.cpp
	vgui_ScorePanel.cpp
	vgui_ServerBrowser.cpp
	vgui_SpectatorPanel.cpp
	vgui_TeamFortressViewport.cpp
	vgui_teammenu.cpp
	view.cpp
	voice_status.cpp
	hl/hl_baseentity.cpp
	hl/hl_events.cpp
	hl/hl_objects.cpp
	hl/hl_weapons.cpp
	../common/parsemsg.cpp
	../dlls/weapons/crossbow.cpp
	../dlls/weapons/crowbar.cpp
	../dlls/weapons/egon.cpp
	../dlls/weapons/gauss.cpp
	../dlls/weapons/glock.cpp
	../dlls/weapons/handgrenade.cpp
	../dlls/weapons/hornetgun.cpp
	../dlls/weapons/mp5.cpp
	../dlls/weapons/python.cpp
	../dlls/weapons/rpg.cpp
	../dlls/weapons/satchel.cpp
	../dlls/weapons/shotgun.cpp
	../dlls/weapons/squeakgrenade.cpp
	../dlls/weapons/tripmine.cpp
	../game_shared/vgui_checkbutton2.cpp
	../game_shared/vgui_grid.cpp
	../game_shared/vgui_helpers.cpp
	../game_shared/vgui_listbox.cpp
	../game_shared/vgui_loadtga.cpp
	../game_shared/vgui_scrollbar2.cpp
	../game_shared/vgui_slider2.cpp
	../game_shared/voice_banmgr.cpp
	../pm_shared/pm_debug.c
	../pm_shared/pm_math.c
	../pm_shared/pm_shared.c
	../public/interface.cpp
)

set(HDR_HL_CDLL
	ammo.h
	ammohistory.h
	bench.h
	camera.h
	cl_dll.h
	cl_util.h
	com_weapons.h
	demo.h
	eventscripts.h
	ev_hldm.h
	Exports.h
	GameStudioModelRenderer.h
	global_consts.h
	health.h
	hud.h
	hud_benchtrace.h
	hud_iface.h
	hud_servers.h
	hud_servers_priv.h
	hud_spectator.h
	interpolation.h
	in_defs.h
	kbutton.h
	StudioModelRenderer.h
	studio_util.h
	tri.h
	vgui_ControlConfigPanel.h
	vgui_int.h
	vgui_SchemeManager.h
	vgui_ScorePanel.h
	vgui_ServerBrowser.h
	vgui_SpectatorPanel.h
	vgui_TeamFortressViewport.h
	view.h
	voice_status.h
	wrect.h
	../common/beamdef.h
	../common/cl_entity.h
	../common/com_model.h
	../common/const.h
	../common/con_nprint.h
	../common/crc.h
	../common/cvardef.h
	../common/demo_api.h
	../common/dlight.h
	../common/entity_state.h
	../common/entity_types.h
	../common/event_api.h
	../common/event_args.h
	../common/event_flags.h
	../common/hltv.h
	../common/in_buttons.h
	../common/mathlib.h
	../common/netadr.h
	../common/net_api.h
	../common/parsemsg.h
	../common/particledef.h
	../common/pmtrace.h
	../common/port.h
	../common/ref_params.h
	../common/r_efx.h
	../common/r_studioint.h
	../common/screenfade.h
	../common/Sequence.h
	../common/studio_event.h
	../common/triangleapi.h
	../common/usercmd.h
	../common/vector.h
	../common/weaponinfo.h
	../common/winsani_in.h
	../common/winsani_out.h
	../dlls/activity.h
	../dlls/monsters/basemonster.h
	../dlls/cbase.h
	../dlls/cdll_dll.h
	../dlls/effects.h
	../dlls/enginecallback.h
	../dlls/extdll.h
	../dlls/gamerules.h
	../dlls/weapons/hornet.h
	../dlls/monsters/monsterevent.h
	../dlls/monsters/monsters.h
	../dlls/nodes.h
	../dlls/player.h
	../dlls/saverestore.h
	../dlls/schedule.h
	../dlls/skill.h
	../dlls/soundent.h
	../dlls/util.h
	../dlls/weapons/weapons.h
	../engine/APIProxy.h
	../engine/cdll_int.h
	../engine/custom.h
	../engine/customentity.h
	../engine/edict.h
	../engine/eiface.h
	../engine/progdefs.h
	../engine/progs.h
	../engine/shake.h
	../engine/studio.h
	../external/SDL2/begin_code.h
	../external/SDL2/close_code.h
	../external/SDL2/SDL.h
	../external/SDL2/SDL_assert.h
	../external/SDL2/SDL_atomic.h
	../external/SDL2/SDL_audio.h
	../external/SDL2/SDL_bits.h
	../external/SDL2/SDL_blendmode.h
	../external/SDL2/SDL_clipboard.h
	../external/SDL2/SDL_config.h
	../external/SDL2/SDL_config_android.h
	../external/SDL2/SDL_config_iphoneos.h
	../external/SDL2/SDL_config_macosx.h
	../external/SDL2/SDL_config_minimal.h
	../external/SDL2/SDL_config_nintendods.h
	../external/SDL2/SDL_config_pandora.h
	../external/SDL2/SDL_config_windows.h
	../external/SDL2/SDL_config_wiz.h
	../external/SDL2/SDL_copying.h
	../external/SDL2/SDL_cpuinfo.h
	../external/SDL2/SDL_endian.h
	../external/SDL2/SDL_error.h
	../external/SDL2/SDL_events.h
	../external/SDL2/SDL_gamecontroller.h
	../external/SDL2/SDL_gesture.h
	../external/SDL2/SDL_haptic.h
	../external/SDL2/SDL_hints.h
	../external/SDL2/SDL_input.h
	../external/SDL2/SDL_joystick.h
	../external/SDL2/SDL_keyboard.h
	../external/SDL2/SDL_keycode.h
	../external/SDL2/SDL_loadso.h
	../external/SDL2/SDL_log.h
	../external/SDL2/SDL_main.h
	../external/SDL2/SDL_messagebox.h
	../external/SDL2/SDL_mouse.h
	../external/SDL2/SDL_mutex.h
	../external/SDL2/SDL_name.h
	../external/SDL2/SDL_opengl.h
	../external/SDL2/SDL_opengles.h
	../external/SDL2/SDL_opengles2.h
	../external/SDL2/SDL_pixels.h
	../external/SDL2/SDL_platform.h
	../external/SDL2/SDL_power.h
	../external/SDL2/SDL_quit.h
	../external/SDL2/SDL_rect.h
	../external/SDL2/SDL_render.h
	../external/SDL2/SDL_revision.h
	../external/SDL2/SDL_rwops.h
	../external/SDL2/SDL_scancode.h
	../external/SDL2/SDL_shape.h
	../external/SDL2/SDL_stdinc.h
	../external/SDL2/SDL_surface.h
	../external/SDL2/SDL_system.h
	../external/SDL2/SDL_syswm.h
	../external/SDL2/SDL_test.h
	../external/SDL2/SDL_test_assert.h
	../external/SDL2/SDL_test_common.h
	../external/SDL2/SDL_test_compare.h
	../external/SDL2/SDL_test_crc32.h
	../external/SDL2/SDL_test_font.h
	../external/SDL2/SDL_test_fuzzer.h
	../external/SDL2/SDL_test_harness.h
	../external/SDL2/SDL_test_images.h
	../external/SDL2/SDL_test_log.h
	../external/SDL2/SDL_test_md5.h
	../external/SDL2/SDL_test_random.h
	../external/SDL2/SDL_thread.h
	../external/SDL2/SDL_timer.h
	../external/SDL2/SDL_touch.h
	../external/SDL2/SDL_types.h
	../external/SDL2/SDL_version.h
	../external/SDL2/SDL_video.h
	../game_shared/bitvec.h
	../game_shared/player_info.h
	../game_shared/vgui_checkbutton2.h
	../game_shared/vgui_defaultinputsignal.h
	../game_shared/vgui_grid.h
	../game_shared/vgui_helpers.h
	../game_shared/vgui_listbox.h
	../game_shared/vgui_loadtga.h
	../game_shared/vgui_scrollbar2.h
	../game_shared/vgui_slider2.h
	../game_shared/voice_banmgr.h
	../game_shared/voice_common.h
	../game_shared/voice_status.h
	../pm_shared/pm_debug.h
	../pm_shared/pm_defs.h
	../pm_shared/pm_info.h
	../pm_shared/pm_materials.h
	../pm_shared/pm_movevars.h
	../pm_shared/pm_shared.h
	../public/archtypes.h
	../public/interface.h
	../public/keydefs.h
	../public/particleman.h
	../public/pman_particlemem.h
	../public/pman_triangleffect.h
	../public/cl_dll/IGameClientExports.h
	../public/steam/steamtypes.h
	../utils/vgui/include/VGUI.h
	../utils/vgui/include/VGUI_ActionSignal.h
	../utils/vgui/include/VGUI_App.h
	../utils/vgui/include/VGUI_Bitmap.h
	../utils/vgui/include/VGUI_BitmapTGA.h
	../utils/vgui/include/VGUI_Border.h
	../utils/vgui/include/VGUI_BorderLayout.h
	../utils/vgui/include/VGUI_BorderPair.h
	../utils/vgui/include/VGUI_BuildGroup.h
	../utils/vgui/include/VGUI_Button.h
	../utils/vgui/include/VGUI_ButtonController.h
	../utils/vgui/include/VGUI_ButtonGroup.h
	../utils/vgui/include/VGUI_ChangeSignal.h
	../utils/vgui/include/VGUI_CheckButton.h
	../utils/vgui/include/VGUI_Color.h
	../utils/vgui/include/VGUI_ComboKey.h
	../utils/vgui/include/VGUI_ConfigWizard.h
	../utils/vgui/include/VGUI_Cursor.h
	../utils/vgui/include/VGUI_Dar.h
	../utils/vgui/include/VGUI_DataInputStream.h
	../utils/vgui/include/VGUI_Desktop.h
	../utils/vgui/include/VGUI_DesktopIcon.h
	../utils/vgui/include/VGUI_EditPanel.h
	../utils/vgui/include/VGUI_EtchedBorder.h
	../utils/vgui/include/VGUI_FileInputStream.h
	../utils/vgui/include/VGUI_FlowLayout.h
	../utils/vgui/include/VGUI_FocusChangeSignal.h
	../utils/vgui/include/VGUI_FocusNavGroup.h
	../utils/vgui/include/VGUI_Font.h
	../utils/vgui/include/VGUI_Frame.h
	../utils/vgui/include/VGUI_FrameSignal.h
	../utils/vgui/include/VGUI_GridLayout.h
	../utils/vgui/include/VGUI_HeaderPanel.h
	../utils/vgui/include/VGUI_Image.h
	../utils/vgui/include/VGUI_ImagePanel.h
	../utils/vgui/include/VGUI_InputSignal.h
	../utils/vgui/include/VGUI_InputStream.h
	../utils/vgui/include/VGUI_IntChangeSignal.h
	../utils/vgui/include/VGUI_IntLabel.h
	../utils/vgui/include/VGUI_KeyCode.h
	../utils/vgui/include/VGUI_Label.h
	../utils/vgui/include/VGUI_Layout.h
	../utils/vgui/include/VGUI_LayoutInfo.h
	../utils/vgui/include/VGUI_LineBorder.h
	../utils/vgui/include/VGUI_ListPanel.h
	../utils/vgui/include/VGUI_LoweredBorder.h
	../utils/vgui/include/VGUI_Menu.h
	../utils/vgui/include/VGUI_MenuItem.h
	../utils/vgui/include/VGUI_MenuSeparator.h
	../utils/vgui/include/VGUI_MessageBox.h
	../utils/vgui/include/VGUI_MiniApp.h
	../utils/vgui/include/VGUI_MouseCode.h
	../utils/vgui/include/VGUI_Panel.h
	../utils/vgui/include/VGUI_Point.h
	../utils/vgui/include/VGUI_PopupMenu.h
	../utils/vgui/include/VGUI_ProgressBar.h
	../utils/vgui/include/VGUI_RadioButton.h
	../utils/vgui/include/VGUI_RaisedBorder.h
	../utils/vgui/include/VGUI_RepaintSignal.h
	../utils/vgui/include/VGUI_Scheme.h
	../utils/vgui/include/VGUI_ScrollBar.h
	../utils/vgui/include/VGUI_ScrollPanel.h
	../utils/vgui/include/VGUI_Slider.h
	../utils/vgui/include/VGUI_StackLayout.h
	../utils/vgui/include/VGUI_String.h
	../utils/vgui/include/VGUI_Surface.h
	../utils/vgui/include/VGUI_SurfaceBase.h
	../utils/vgui/include/VGUI_SurfaceGL.h
	../utils/vgui/include/VGUI_TablePanel.h
	../utils/vgui/include/VGUI_TabPanel.h
	../utils/vgui/include/VGUI_TaskBar.h
	../utils/vgui/include/VGUI_TextEntry.h
	../utils/vgui/include/VGUI_TextGrid.h
	../utils/vgui/include/VGUI_TextImage.h
	../utils/vgui/include/VGUI_TextPanel.h
	../utils/vgui/include/VGUI_TickSignal.h
	../utils/vgui/include/VGUI_ToggleButton.h
	../utils/vgui/include/VGUI_TreeFolder.h
	../utils/vgui/include/VGUI_WizardPanel.h
)

include_directories(
	../dlls
	../dlls/monsters
	../dlls/weapons
	../cl_dll
	../public
	../common
	../pm_shared
	../engine
	../utils/vgui/include
	../game_shared
	../external
)

add_library(client SHARED ${SRC_HL_CDLL} ${HDR_HL_CDLL})

add_definitions(-DWIN32 -D_DEBUG -D_WINDOWS -DCLIENT_DLL -DCLIENT_WEAPONS)

find_file(SDL2_LIBRARY SDL2.lib ../lib/public)
find_file(VGUI_LIBRARY vgui.lib ../utils/vgui/lib/win32_vc6)

message(STATUS "Found SDL library @ ${SDL2_LIBRARY}")
message(STATUS "Found vgui library @ ${VGUI_LIBRARY}")

target_link_libraries(client ${SDL2_LIBRARY} ${VGUI_LIBRARY} wsock32)

if(DEFINED MOD_FOLDER)
	if(NOT DEFINED MOD_CDLL_INSTALL_FOLDER)
		set(MOD_CDLL_INSTALL_FOLDER "${MOD_FOLDER}\\cl_dlls")
	endif(NOT DEFINED MOD_CDLL_INSTALL_FOLDER)

	message(STATUS "Will copy client to ${MOD_CDLL_INSTALL_FOLDER}")
	add_custom_target(Copy_HL_CDLL_To_Mod_Directory ALL
		COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_BINARY_DIR}\\cl_dll\\client.dll" ${MOD_CDLL_INSTALL_FOLDER}
		COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_BINARY_DIR}\\cl_dll\\client.pdb" ${MOD_CDLL_INSTALL_FOLDER}
	)
	add_dependencies(Copy_HL_CDLL_To_Mod_Directory client)
endif(DEFINED MOD_FOLDER)
