
set(SRC_HL_CDLL
	ammo.cpp
	ammohistory.cpp
	ammo_secondary.cpp
	battery.cpp
	cdll_int.cpp
	com_weapons.cpp
	death.cpp
	demo.cpp
	entity.cpp
	events.cpp
	ev_common.cpp
	ev_hldm.cpp
	flashlight.cpp
	GameStudioModelRenderer.cpp
	geiger.cpp
	health.cpp
	hud.cpp
	hud_bench.cpp
	hud_benchtrace.cpp
	hud_msg.cpp
	hud_redraw.cpp
	hud_servers.cpp
	hud_spectator.cpp
	hud_update.cpp
	input.cpp
	inputw32.cpp
	interpolation.cpp
	in_camera.cpp
	menu.cpp
	message.cpp
	saytext.cpp
	statusbar.cpp
	status_icons.cpp
	StudioModelRenderer.cpp
	studio_util.cpp
	text_message.cpp
	train.cpp
	tri.cpp
	util.cpp
	vgui_ClassMenu.cpp
	vgui_ControlConfigPanel.cpp
	vgui_CustomObjects.cpp
	vgui_FinishSummaryPanel.cpp
	vgui_int.cpp
	vgui_MOTDWindow.cpp
	vgui_SchemeManager.cpp
	vgui_ServerBrowser.cpp
	vgui_SpectatorPanel.cpp
	vgui_TeamFortressViewport.cpp
	vgui_teammenu.cpp
	view.cpp
	voice_status.cpp
	hl/hl_baseentity.cpp
	hl/hl_events.cpp
	hl/hl_objects.cpp
	hl/hl_weapons.cpp
	../common/parsemsg.cpp
	../dlls/weapons/crossbow.cpp
	../dlls/weapons/crowbar.cpp
	../dlls/weapons/egon.cpp
	../dlls/weapons/gauss.cpp
	../dlls/weapons/glock.cpp
	../dlls/weapons/handgrenade.cpp
	../dlls/weapons/hornetgun.cpp
	../dlls/weapons/mp5.cpp
	../dlls/weapons/python.cpp
	../dlls/weapons/rpg.cpp
	../dlls/weapons/satchel.cpp
	../dlls/weapons/shotgun.cpp
	../dlls/weapons/squeakgrenade.cpp
	../dlls/weapons/tripmine.cpp
	../game_shared/vgui_checkbutton2.cpp
	../game_shared/vgui_grid.cpp
	../game_shared/vgui_helpers.cpp
	../game_shared/vgui_listbox.cpp
	../game_shared/vgui_loadtga.cpp
	../game_shared/vgui_scrollbar2.cpp
	../game_shared/vgui_slider2.cpp
	../game_shared/voice_banmgr.cpp
	../pm_shared/pm_debug.c
	../pm_shared/pm_math.c
	../pm_shared/pm_shared.c
	../public/interface.cpp
)

set(HDR_HL_CDLL
	ammo.h
	ammohistory.h
	bench.h
	camera.h
	cl_dll.h
	cl_util.h
	com_weapons.h
	demo.h
	eventscripts.h
	ev_hldm.h
	Exports.h
	GameStudioModelRenderer.h
	global_consts.h
	health.h
	hud.h
	hud_benchtrace.h
	hud_iface.h
	hud_servers.h
	hud_servers_priv.h
	hud_spectator.h
	interpolation.h
	in_defs.h
	kbutton.h
	StudioModelRenderer.h
	studio_util.h
	tri.h
	vgui_ControlConfigPanel.h
	vgui_int.h
	vgui_SchemeManager.h
	vgui_ServerBrowser.h
	vgui_SpectatorPanel.h
	vgui_TeamFortressViewport.h
	view.h
	voice_status.h
	wrect.h
	../common/beamdef.h
	../common/cl_entity.h
	../common/com_model.h
	../common/const.h
	../common/con_nprint.h
	../common/crc.h
	../common/cvardef.h
	../common/demo_api.h
	../common/dlight.h
	../common/entity_state.h
	../common/entity_types.h
	../common/event_api.h
	../common/event_args.h
	../common/event_flags.h
	../common/hltv.h
	../common/in_buttons.h
	../common/mathlib.h
	../common/netadr.h
	../common/net_api.h
	../common/parsemsg.h
	../common/particledef.h
	../common/pmtrace.h
	../common/port.h
	../common/ref_params.h
	../common/r_efx.h
	../common/r_studioint.h
	../common/screenfade.h
	../common/Sequence.h
	../common/studio_event.h
	../common/triangleapi.h
	../common/usercmd.h
	../common/vector.h
	../common/weaponinfo.h
	../common/winsani_in.h
	../common/winsani_out.h
	../dlls/activity.h
	../dlls/monsters/basemonster.h
	../dlls/cbase.h
	../dlls/cdll_dll.h
	../dlls/effects.h
	../dlls/enginecallback.h
	../dlls/extdll.h
	../dlls/gamerules.h
	../dlls/weapons/hornet.h
	../dlls/monsters/monsterevent.h
	../dlls/monsters/monsters.h
	../dlls/nodes.h
	../dlls/player.h
	../dlls/saverestore.h
	../dlls/schedule.h
	../dlls/skill.h
	../dlls/soundent.h
	../dlls/util.h
	../dlls/weapons/weapons.h
	../engine/APIProxy.h
	../engine/cdll_int.h
	../engine/custom.h
	../engine/customentity.h
	../engine/edict.h
	../engine/eiface.h
	../engine/progdefs.h
	../engine/progs.h
	../engine/shake.h
	../engine/studio.h
	../lib/SDL2/include/SDL2/begin_code.h
	../lib/SDL2/include/SDL2/close_code.h
	../lib/SDL2/include/SDL2/SDL.h
	../lib/SDL2/include/SDL2/SDL_assert.h
	../lib/SDL2/include/SDL2/SDL_atomic.h
	../lib/SDL2/include/SDL2/SDL_audio.h
	../lib/SDL2/include/SDL2/SDL_bits.h
	../lib/SDL2/include/SDL2/SDL_blendmode.h
	../lib/SDL2/include/SDL2/SDL_clipboard.h
	../lib/SDL2/include/SDL2/SDL_config.h
	../lib/SDL2/include/SDL2/SDL_config_android.h
	../lib/SDL2/include/SDL2/SDL_config_iphoneos.h
	../lib/SDL2/include/SDL2/SDL_config_macosx.h
	../lib/SDL2/include/SDL2/SDL_config_minimal.h
	../lib/SDL2/include/SDL2/SDL_config_nintendods.h
	../lib/SDL2/include/SDL2/SDL_config_pandora.h
	../lib/SDL2/include/SDL2/SDL_config_windows.h
	../lib/SDL2/include/SDL2/SDL_config_wiz.h
	../lib/SDL2/include/SDL2/SDL_copying.h
	../lib/SDL2/include/SDL2/SDL_cpuinfo.h
	../lib/SDL2/include/SDL2/SDL_endian.h
	../lib/SDL2/include/SDL2/SDL_error.h
	../lib/SDL2/include/SDL2/SDL_events.h
	../lib/SDL2/include/SDL2/SDL_gamecontroller.h
	../lib/SDL2/include/SDL2/SDL_gesture.h
	../lib/SDL2/include/SDL2/SDL_haptic.h
	../lib/SDL2/include/SDL2/SDL_hints.h
	../lib/SDL2/include/SDL2/SDL_input.h
	../lib/SDL2/include/SDL2/SDL_joystick.h
	../lib/SDL2/include/SDL2/SDL_keyboard.h
	../lib/SDL2/include/SDL2/SDL_keycode.h
	../lib/SDL2/include/SDL2/SDL_loadso.h
	../lib/SDL2/include/SDL2/SDL_log.h
	../lib/SDL2/include/SDL2/SDL_main.h
	../lib/SDL2/include/SDL2/SDL_messagebox.h
	../lib/SDL2/include/SDL2/SDL_mouse.h
	../lib/SDL2/include/SDL2/SDL_mutex.h
	../lib/SDL2/include/SDL2/SDL_name.h
	../lib/SDL2/include/SDL2/SDL_opengl.h
	../lib/SDL2/include/SDL2/SDL_opengles.h
	../lib/SDL2/include/SDL2/SDL_opengles2.h
	../lib/SDL2/include/SDL2/SDL_pixels.h
	../lib/SDL2/include/SDL2/SDL_platform.h
	../lib/SDL2/include/SDL2/SDL_power.h
	../lib/SDL2/include/SDL2/SDL_quit.h
	../lib/SDL2/include/SDL2/SDL_rect.h
	../lib/SDL2/include/SDL2/SDL_render.h
	../lib/SDL2/include/SDL2/SDL_revision.h
	../lib/SDL2/include/SDL2/SDL_rwops.h
	../lib/SDL2/include/SDL2/SDL_scancode.h
	../lib/SDL2/include/SDL2/SDL_shape.h
	../lib/SDL2/include/SDL2/SDL_stdinc.h
	../lib/SDL2/include/SDL2/SDL_surface.h
	../lib/SDL2/include/SDL2/SDL_system.h
	../lib/SDL2/include/SDL2/SDL_syswm.h
	../lib/SDL2/include/SDL2/SDL_test.h
	../lib/SDL2/include/SDL2/SDL_test_assert.h
	../lib/SDL2/include/SDL2/SDL_test_common.h
	../lib/SDL2/include/SDL2/SDL_test_compare.h
	../lib/SDL2/include/SDL2/SDL_test_crc32.h
	../lib/SDL2/include/SDL2/SDL_test_font.h
	../lib/SDL2/include/SDL2/SDL_test_fuzzer.h
	../lib/SDL2/include/SDL2/SDL_test_harness.h
	../lib/SDL2/include/SDL2/SDL_test_images.h
	../lib/SDL2/include/SDL2/SDL_test_log.h
	../lib/SDL2/include/SDL2/SDL_test_md5.h
	../lib/SDL2/include/SDL2/SDL_test_random.h
	../lib/SDL2/include/SDL2/SDL_thread.h
	../lib/SDL2/include/SDL2/SDL_timer.h
	../lib/SDL2/include/SDL2/SDL_touch.h
	../lib/SDL2/include/SDL2/SDL_types.h
	../lib/SDL2/include/SDL2/SDL_version.h
	../lib/SDL2/include/SDL2/SDL_video.h
	../game_shared/bitvec.h
	../game_shared/player_info.h
	../game_shared/vgui_checkbutton2.h
	../game_shared/vgui_defaultinputsignal.h
	../game_shared/vgui_grid.h
	../game_shared/vgui_helpers.h
	../game_shared/vgui_listbox.h
	../game_shared/vgui_loadtga.h
	../game_shared/vgui_scrollbar2.h
	../game_shared/vgui_slider2.h
	../game_shared/voice_banmgr.h
	../game_shared/voice_common.h
	../game_shared/voice_status.h
	../pm_shared/pm_debug.h
	../pm_shared/pm_defs.h
	../pm_shared/pm_info.h
	../pm_shared/pm_materials.h
	../pm_shared/pm_movevars.h
	../pm_shared/pm_shared.h
	../public/archtypes.h
	../public/interface.h
	../public/keydefs.h
	../public/particleman.h
	../public/pman_particlemem.h
	../public/pman_triangleffect.h
	../public/cl_dll/IGameClientExports.h
	../public/steam/steamtypes.h
	../lib/vgui/include/VGUI.h
	../lib/vgui/include/VGUI_ActionSignal.h
	../lib/vgui/include/VGUI_App.h
	../lib/vgui/include/VGUI_Bitmap.h
	../lib/vgui/include/VGUI_BitmapTGA.h
	../lib/vgui/include/VGUI_Border.h
	../lib/vgui/include/VGUI_BorderLayout.h
	../lib/vgui/include/VGUI_BorderPair.h
	../lib/vgui/include/VGUI_BuildGroup.h
	../lib/vgui/include/VGUI_Button.h
	../lib/vgui/include/VGUI_ButtonController.h
	../lib/vgui/include/VGUI_ButtonGroup.h
	../lib/vgui/include/VGUI_ChangeSignal.h
	../lib/vgui/include/VGUI_CheckButton.h
	../lib/vgui/include/VGUI_Color.h
	../lib/vgui/include/VGUI_ComboKey.h
	../lib/vgui/include/VGUI_ConfigWizard.h
	../lib/vgui/include/VGUI_Cursor.h
	../lib/vgui/include/VGUI_Dar.h
	../lib/vgui/include/VGUI_DataInputStream.h
	../lib/vgui/include/VGUI_Desktop.h
	../lib/vgui/include/VGUI_DesktopIcon.h
	../lib/vgui/include/VGUI_EditPanel.h
	../lib/vgui/include/VGUI_EtchedBorder.h
	../lib/vgui/include/VGUI_FileInputStream.h
	../lib/vgui/include/VGUI_FlowLayout.h
	../lib/vgui/include/VGUI_FocusChangeSignal.h
	../lib/vgui/include/VGUI_FocusNavGroup.h
	../lib/vgui/include/VGUI_Font.h
	../lib/vgui/include/VGUI_Frame.h
	../lib/vgui/include/VGUI_FrameSignal.h
	../lib/vgui/include/VGUI_GridLayout.h
	../lib/vgui/include/VGUI_HeaderPanel.h
	../lib/vgui/include/VGUI_Image.h
	../lib/vgui/include/VGUI_ImagePanel.h
	../lib/vgui/include/VGUI_InputSignal.h
	../lib/vgui/include/VGUI_InputStream.h
	../lib/vgui/include/VGUI_IntChangeSignal.h
	../lib/vgui/include/VGUI_IntLabel.h
	../lib/vgui/include/VGUI_KeyCode.h
	../lib/vgui/include/VGUI_Label.h
	../lib/vgui/include/VGUI_Layout.h
	../lib/vgui/include/VGUI_LayoutInfo.h
	../lib/vgui/include/VGUI_LineBorder.h
	../lib/vgui/include/VGUI_ListPanel.h
	../lib/vgui/include/VGUI_LoweredBorder.h
	../lib/vgui/include/VGUI_Menu.h
	../lib/vgui/include/VGUI_MenuItem.h
	../lib/vgui/include/VGUI_MenuSeparator.h
	../lib/vgui/include/VGUI_MessageBox.h
	../lib/vgui/include/VGUI_MiniApp.h
	../lib/vgui/include/VGUI_MouseCode.h
	../lib/vgui/include/VGUI_Panel.h
	../lib/vgui/include/VGUI_Point.h
	../lib/vgui/include/VGUI_PopupMenu.h
	../lib/vgui/include/VGUI_ProgressBar.h
	../lib/vgui/include/VGUI_RadioButton.h
	../lib/vgui/include/VGUI_RaisedBorder.h
	../lib/vgui/include/VGUI_RepaintSignal.h
	../lib/vgui/include/VGUI_Scheme.h
	../lib/vgui/include/VGUI_ScrollBar.h
	../lib/vgui/include/VGUI_ScrollPanel.h
	../lib/vgui/include/VGUI_Slider.h
	../lib/vgui/include/VGUI_StackLayout.h
	../lib/vgui/include/VGUI_String.h
	../lib/vgui/include/VGUI_Surface.h
	../lib/vgui/include/VGUI_SurfaceBase.h
	../lib/vgui/include/VGUI_SurfaceGL.h
	../lib/vgui/include/VGUI_TablePanel.h
	../lib/vgui/include/VGUI_TabPanel.h
	../lib/vgui/include/VGUI_TaskBar.h
	../lib/vgui/include/VGUI_TextEntry.h
	../lib/vgui/include/VGUI_TextGrid.h
	../lib/vgui/include/VGUI_TextImage.h
	../lib/vgui/include/VGUI_TextPanel.h
	../lib/vgui/include/VGUI_TickSignal.h
	../lib/vgui/include/VGUI_ToggleButton.h
	../lib/vgui/include/VGUI_TreeFolder.h
	../lib/vgui/include/VGUI_WizardPanel.h
)

include_directories(
	../dlls
	../dlls/monsters
	../dlls/weapons
	../cl_dll
	../public
	../common
	../pm_shared
	../engine
	../game_shared
	../lib/vgui/include
	../lib/SDL2/include
)

add_library(client SHARED ${SRC_HL_CDLL} ${HDR_HL_CDLL})

add_definitions(-DWIN32 -D_DEBUG -D_WINDOWS -DCLIENT_DLL -DCLIENT_WEAPONS)

find_file(SDL2_LIBRARY SDL2.lib ../lib/SDL2/lib)
find_file(VGUI_LIBRARY vgui.lib ../lib/vgui/lib/win32_vc6)

message(STATUS "Found SDL library @ ${SDL2_LIBRARY}")
message(STATUS "Found vgui library @ ${VGUI_LIBRARY}")

target_link_libraries(client ${SDL2_LIBRARY} ${VGUI_LIBRARY} wsock32)

if(DEFINED MOD_FOLDER)
	if(NOT DEFINED MOD_CDLL_INSTALL_FOLDER)
		set(MOD_CDLL_INSTALL_FOLDER "${MOD_FOLDER}\\cl_dlls")
	endif(NOT DEFINED MOD_CDLL_INSTALL_FOLDER)

	message(STATUS "Will copy client to ${MOD_CDLL_INSTALL_FOLDER}")
	add_custom_target(Copy_HL_CDLL_To_Mod_Directory ALL
		COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_BINARY_DIR}\\cl_dll\\client.dll" ${MOD_CDLL_INSTALL_FOLDER}
		COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_BINARY_DIR}\\cl_dll\\client.pdb" ${MOD_CDLL_INSTALL_FOLDER}
	)
	add_dependencies(Copy_HL_CDLL_To_Mod_Directory client)
endif(DEFINED MOD_FOLDER)
